tests/int/use_command/snapshots/integration__int__use_command__edge_cases__should_handle_all_flags_combined.snap
---
source: tests/int/use_command/edge_cases.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-r"
    - "-t"
    - "-e"
    - "--format"
    - grouped
    - "-G"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
lib
 - crate::analyzer::Analyzer
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
 - crate::error::AnalysisError
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::ShortestPaths
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::InitOutcome
 - crate::rules::Violation
 - crate::rules::ViolationKind
analyzer
 - crate::cache::ParseCache
 - crate::discover::CrateInfo
 - crate::discover::ModuleInfo
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
 - crate::error::AnalysisError
 - crate::error::Result
 - crate::graph
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::build_edges
 - crate::graph::resolve_reference_target
 - crate::graph::truncate_module_path
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::module_path::is_in_subtree
 - crate::module_path::split_parent
 - crate::parser::CrateAnalyzer
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::TypeReference
 - crate::resolve::resolve_glob
 - crate::rules
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::InitOutcome
 - crate::rules::RuleSet
 - crate::rules::evaluate
 - crate::rules::resolve_config_path
 - crate::rules::scaffold_config
analyzer::tests
 - crate::analyzer::Analyzer
 - crate::analyzer::expand_groups
 - crate::discover::ModuleVisibility
 - crate::reference::PathSuffix
cache
cache::tests
 - crate::cache::ParseCache
constants
discover
 - crate::cache::ParseCache
discover::module_tree
 - crate::cache::ParseCache
 - crate::constants::LIB_FILE_NAME
 - crate::constants::MAIN_FILE_NAME
 - crate::constants::MODULE_FILE_NAME
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::module_path::split_parent
 - crate::utils::ReadFileError
 - crate::utils::has_cfg_test
 - crate::utils::read_source_file
discover::module_tree::tests
discover::tests
 - crate::discover::CrateInfo
 - crate::discover::CrateInfoError
 - crate::discover::ModuleInfo
 - crate::discover::ModuleVisibility
 - crate::discover::Result
 - crate::discover::TargetInfo
 - crate::discover::TargetKind
error
 - crate::discover::CrateInfoError
graph
 - crate::error::AnalysisError
 - crate::error::Result
 - crate::graph::cycles
 - crate::graph::edges
 - crate::graph::orphans
 - crate::graph::paths
graph::cycles
 - crate::graph::edges
graph::cycles::tests
 - crate::graph::cycles
graph::edges
 - crate::model::AnalysisResult
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
graph::edges::tests
 - crate::graph::edges
graph::orphans
 - crate::graph::edges
graph::orphans::tests
 - crate::graph::orphans
graph::paths
 - crate::graph::edges
graph::paths::tests
 - crate::graph::paths
graph::tests
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::graph::DependencyGraphOptions
 - crate::graph::Edge
 - crate::graph::ShortestPaths
 - crate::graph::build_edges
 - crate::graph::compute_shortest_paths
 - crate::graph::detect_cycles
 - crate::graph::find_orphans
 - crate::graph::resolve_reference_target
 - crate::graph::truncate_module_path
model
 - crate::reference::TypeReference
model::tests
 - crate::model::AnalysisOptions
 - crate::model::AnalysisResult
 - crate::reference::TypeReference
module_path
module_path::tests
 - crate::module_path::is_in_subtree
 - crate::module_path::parent_module
 - crate::module_path::split_parent
parser
 - crate::cache::ParseCache
 - crate::parser::visitor
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::ReadFileError
 - crate::utils::descend_inline_module
 - crate::utils::read_source_file
parser::tests
 - crate::analyzer::expand_groups
 - crate::parser::AnalyzerError
 - crate::parser::CrateAnalyzer
 - crate::parser::Result
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::utils::MAX_FILE_BYTES
 - crate::utils::ReadFileError
parser::visitor
 - crate::constants::PATH_QUALIFIER_CRATE
 - crate::constants::PATH_QUALIFIER_SELF
 - crate::constants::PATH_QUALIFIER_SUPER
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::has_cfg_test
parser::visitor::tests
 - crate::parser::visitor
reference
 - crate::constants::PATH_QUALIFIER_SELF
reference::tests
 - crate::reference::GroupItem
 - crate::reference::PathPrefix
 - crate::reference::PathSuffix
 - crate::reference::Segments
 - crate::reference::TypeReference
resolve
 - crate::cache::ParseCache
 - crate::discover::CrateInfo
 - crate::module_path::is_in_subtree
 - crate::module_path::parent_module
 - crate::reference::PathPrefix
 - crate::reference::TypeReference
 - crate::utils::descend_inline_module
 - crate::utils::read_source_file
resolve::tests
 - crate::resolve::extract_public_items
 - crate::resolve::resolve_glob
rules
 - crate::graph::DependencyGraphOptions
 - crate::module_path::is_in_subtree
 - crate::rules::eval
 - crate::rules::load
rules::eval
 - crate::graph::Cycle
 - crate::graph::DependencyGraph
 - crate::module_path::is_in_subtree
 - crate::rules::AllowedCycle
 - crate::rules::CheckReport
 - crate::rules::LayerPos
 - crate::rules::RuleSet
 - crate::rules::Violation
 - crate::rules::ViolationKind
 - crate::rules::is_parent_child_cycle
rules::eval::tests
 - crate::graph::AnnotatedEdges
 - crate::graph::Cycle
 - crate::rules::AllowedCycle
 - crate::rules::DenyRule
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::ViolationKind
rules::load
 - crate::error::AnalysisError
 - crate::error::Result
 - crate::graph::Cycle
 - crate::rules::AllowedCycle
 - crate::rules::DenyRule
 - crate::rules::InitOutcome
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::is_parent_child_cycle
rules::load::tests
 - crate::graph::AnnotatedEdges
 - crate::rules::load
rules::tests
 - crate::rules::AllowedCycle
 - crate::rules::CheckOptions
 - crate::rules::CheckReport
 - crate::rules::DenyRule
 - crate::rules::InitOutcome
 - crate::rules::LayerPos
 - crate::rules::LayerRule
 - crate::rules::ModulePattern
 - crate::rules::RestrictRule
 - crate::rules::RuleSet
 - crate::rules::Violation
 - crate::rules::ViolationKind
 - crate::rules::evaluate
 - crate::rules::resolve_config_path
 - crate::rules::scaffold_config
utils
 - crate::constants::ATTR_CFG
 - crate::constants::MODULE_NAME_TEST
utils::tests
 - crate::utils::MAX_FILE_BYTES
 - crate::utils::ReadFileError
 - crate::utils::descend_inline_module
 - crate::utils::has_cfg_test
 - crate::utils::read_source_file
version

----- stderr -----
