tests/int/use_command/snapshots/integration__int__use_command__edge_cases__should_handle_depth_without_expand.snap
---
source: tests/int/use_command/edge_cases.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "-d"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
crate::analyzer
crate::discover::{ModuleInfo, ModuleVisibility, TargetInfo, TargetKind}
crate::error
crate::graph::{AnnotatedEdges, Cycle, DependencyGraph, DependencyGraphOptions, Edge, ShortestPaths}
crate::model::{AnalysisOptions, AnalysisResult}
crate::reference::{GroupItem, PathPrefix, PathSuffix, TypeReference}
crate::rules::{CheckOptions, CheckReport, InitOutcome, Violation, ViolationKind}

----- stderr -----
