tests/int/use_command/snapshots/integration__int__use_command__edge_cases__should_handle_grouped_without_recursive.snap
---
source: tests/int/use_command/edge_cases.rs
info:
  program: crawk
  args:
    - use
    - lib
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
lib
 - crate::analyzer::Analyzer
 - crate::discover::{ModuleInfo, ModuleVisibility, TargetInfo, TargetKind}
 - crate::error::AnalysisError
 - crate::graph::{AnnotatedEdges, Cycle, DependencyGraph, DependencyGraphOptions, Edge, ShortestPaths}
 - crate::model::{AnalysisOptions, AnalysisResult}
 - crate::reference::{GroupItem, PathPrefix, PathSuffix, TypeReference}
 - crate::rules::{CheckOptions, CheckReport, InitOutcome, Violation, ViolationKind}

----- stderr -----
